
* Fixed bugs in canInvadeOnlyFrom. (veqryn)

* Created new unit attachment, canInvadeOnlyFrom, which determines if a unit can conduct amphibious assaults or if it has to disembark in noncombat. (edwin van der wal)

* Made placements appear as a list, just like moves do, and can now be undone individually. Abstracted undoable moves and placements. (frigoref)


Changes for 1.3.2.3
* Fixed bug in validation of non-combat movement of paratroopers. (veqryn)

* Fixed error where allied air on defending carriers may not shoot at non-sub units under certain conditions. (veqryn)

* Fixed error where after a player got paratroopers, ships no longer had their movement validated correctly. (veqryn)

* Fixed error related to two-hit battleships in middle earth. (veqryn)


Changes for 1.3.2.2
* Fixed infinite loops in purchasing methods for both Strong AI and Weak AI, for low cost units. (veqryn)

* Fixed null pointer error in Strong AI landing of air units for players with impassible capitals. (veqryn)

* Changed savegame-xml exporter to add occupiedTerrOf to any territory not owned by current owner. (veqryn)

* Fixed bug in validation of air that can't land for mixed allied and owned air attempting to land where there already is a carrier and a new carrier will also be placed. (veqryn)

* Fixed null pointer error in Strong AI sea movement. (veqryn)


Changes for 1.3.2.1
* Added new button to main screen, "Rule Book...", which will open up the user's default web browser and go to the triplea sf page with our future rulebook. (veqryn [Mark Christopher Duncan])

* Updated "unitProduction" so when used in conjunction with "Damage From Bombing Done To Units Instead Of Territories" it sets the allowed number of units to be produced in that territory, thereby finally un-associating the PU production of a territory from the Unit production of a territory.